--- a/ApplePicker2022/Assembly-CSharp.csproj
+++ b/ApplePicker2022/Assembly-CSharp.csproj
@@ -56,10 +56,12 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\AppleTree.cs" />
-    <Compile Include="Assets\Apple.cs" />
-    <Compile Include="Assets\ApplePicker.cs" />
     <Compile Include="Assets\Basket.cs" />
+    <Compile Include="Assets\AppleTree.cs" />
+    <Compile Include="Assets\ApplePicker.cs" />
+    <Compile Include="Assets\Apple.cs" />
+    <Compile Include="Assets\ScoreCounter.cs" />
+    <Compile Include="Assets\HighScore.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
